fixing test case for reviewService